# libTAS

./: .gitignore  .gitmodules  32bit.toolchain.cmake  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  README.md  TODO  appveyor.yml  build.sh  configure.ac  games.md  libTAS.desktop  libTasConcat.sh  make.sh  run.sh
debian/: changelog  control  copyright  rules
docs/: .gitignore  Gemfile  _config.yml  faq.md  help.md  index.md  news.md  showcase.md
docs/_posts/: 2022-04-10-version-143.md  2023-11-18-version-145.md  2024-06-25-version-146.md  2025-10-06-version-147.md  2026-05-14-version-148.md
docs/guides/: format.md  how.md  lua.md  options.md  rng.md  unity.md  wsl.md
libTAS.xcodeproj/: project.pbxproj
libTAS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
movies/: Celeste_any.ltm  Celeste_sleeps.txt  EscapeGoat2.114_any.ltm  ShovelKnight_Plague_any.ltm  ShovelKnight_Shovel_any.ltm  ShovelKnight_Specter_any.ltm  SteamWorldDig2_any.ltm  Volgarr_ending_A.ltm  towerfall_36_trials.ltm  towerfall_48_trials.ltm
src/dyld_func_lookup_helper/: dyld_func_lookup_helper.cpp  dyld_func_lookup_helper.h
src/libTAS/: AVEncoder.cpp  AVEncoder.h  DeterministicTimer.cpp  DeterministicTimer.h  EventQueue.cpp  EventQueue.h  GlobalState.cpp  GlobalState.h  Makefile  NonDeterministicTimer.cpp  NonDeterministicTimer.h  SDL.h  ScreenCapture.cpp  ScreenCapture.h  ThreadManager.cpp  ThreadManager.h  ThreadState.cpp  ThreadState.h  TimeHolder.cpp  TimeHolder.h  Utils.cpp  WindowTitle.cpp  WindowTitle.h  avdumping.cpp  avdumping.h  backtrace.cpp  backtrace.h  dlhook.cpp  dlhook.h  dumpvideo.c  dumpvideo.cpp  dumpvideo.h  events.c  events.cpp  events.h  fileio.cpp  fileio.h  fileiowrappers.cpp  fileiowrappers.h  frame.c  (+100 more)
src/linTAS/: AutoSave.cpp  AutoSave.h  ConcurrentQueue.h  Config.cpp  Config.h  Context.h  GameLoop.cpp  GameLoop.h  KeyMapping.cpp  KeyMapping.h  Makefile  MovieFile.cpp  MovieFile.h  PseudoSaveState.h  SaveState.cpp  SaveState.h  StateSection.cpp  StateSection.h  ThreadInfo.cpp  ThreadInfo.h  game.cpp  game.h  keymapping.c  keymapping.cpp  keymapping.h  main.c  main.cpp  main.h  make.sh  recording.c  recording.cpp  recording.h  ui.cpp  (+9 more)
src/program/: AutoDetect.cpp  AutoDetect.h  AutoSave.cpp  AutoSave.h  ConcurrentQueue.h  Config.cpp  Config.h  Context.h  GameEvents.cpp  GameEvents.h  GameEventsQuartz.h  GameEventsQuartz.mm  GameEventsXcb.cpp  GameEventsXcb.h  GameLoop.cpp  GameLoop.h  GameThread.cpp  GameThread.h  Info.plist  KeyMapping.cpp  KeyMapping.h  KeyMappingQuartz.h  KeyMappingQuartz.mm  KeyMappingXcb.cpp  KeyMappingXcb.h  Makefile.am  MergeHelperScript.h  MovieFile.cpp  MovieFile.h  SaveState.cpp  SaveState.h  SaveStateList.cpp  SaveStateList.h  Serial.cpp  Serial.h  Signature.cpp  Signature.h  UnityPatching.cpp  UnityPatching.h  main.cpp  (+2 more)
src/program/lua/: Callbacks.cpp  Callbacks.h  Gui.cpp  Gui.h  Input.cpp  Input.h  LuaFunctionList.cpp  LuaFunctionList.h  Main.cpp  Main.h  Memory.cpp  Memory.h  Movie.cpp  Movie.h  NamedLuaFunction.cpp  NamedLuaFunction.h  Print.cpp  Print.h  Ramsearch.cpp  Ramsearch.h  Runtime.cpp  Runtime.h
src/program/movie/: IMovieAction.h  InputSerialization.cpp  InputSerialization.h  MovieActionEditFrames.cpp  MovieActionEditFrames.h  MovieActionInsertFrames.cpp  MovieActionInsertFrames.h  MovieActionPaint.cpp  MovieActionPaint.h  MovieActionRemoveFrames.cpp  MovieActionRemoveFrames.h  MovieFile.cpp  MovieFile.h  MovieFileAnnotations.cpp  MovieFileAnnotations.h  MovieFileChangeLog.cpp  MovieFileChangeLog.h  MovieFileEditor.cpp  MovieFileEditor.h  MovieFileHeader.cpp  MovieFileHeader.h  MovieFileInputs.cpp  MovieFileInputs.h
src/program/ramsearch/: BaseAddresses.cpp  BaseAddresses.h  CompareEnums.h  CompareOperations.cpp  CompareOperations.h  IOProcessDevice.cpp  IOProcessDevice.h  IRamWatch.h  IRamWatchDetailed.cpp  IRamWatchDetailed.h  MemAccess.cpp  MemAccess.h  MemLayout.cpp  MemLayout.h  MemScanner.cpp  MemScanner.h  MemScannerThread.cpp  MemScannerThread.h  MemSection.cpp  MemSection.h  MemValue.cpp  MemValue.h  RamWatch.cpp  RamWatch.h  RamWatchDetailed.cpp  RamWatchDetailed.h  RamWatchDetailedBuilder.cpp  RamWatchDetailedBuilder.h  TypeIndex.h
src/program/ui/: AnalogInputsModel.cpp  AnalogInputsModel.h  AnalogInputsWindow.cpp  AnalogInputsWindow.h  AnnotationsWindow.cpp  AnnotationsWindow.h  AutoSaveWindow.cpp  AutoSaveWindow.h  ComboBoxItemDelegate.cpp  ComboBoxItemDelegate.h  ControllerAxisWidget.cpp  ControllerAxisWidget.h  ControllerTabWindow.cpp  ControllerTabWindow.h  ControllerWidget.cpp  ControllerWidget.h  CustomResolutionDialog.cpp  CustomResolutionDialog.h  EncodeWindow.cpp  EncodeWindow.h  ErrorChecking.cpp  ErrorChecking.h  ExecutableWindow.cpp  ExecutableWindow.h  GameInfoWindow.cpp  GameInfoWindow.h  GameSpecificWindow.cpp  GameSpecificWindow.h  HexDelegate.cpp  HexDelegate.h  HexViewWindow.cpp  HexViewWindow.h  InputChangeLogModel.cpp  InputChangeLogModel.h  InputChangeLogWindow.cpp  InputChangeLogWindow.h  InputEditorModel.cpp  InputEditorModel.h  InputEditorView.cpp  InputEditorView.h  (+48 more)
src/program/ui/settings/: AudioPane.cpp  AudioPane.h  DebugPane.cpp  DebugPane.h  GameSpecificPane.cpp  GameSpecificPane.h  InputPane.cpp  InputPane.h  MoviePane.cpp  MoviePane.h  PathPane.cpp  PathPane.h  RuntimePane.cpp  RuntimePane.h  SettingsWindow.cpp  SettingsWindow.h  VideoPane.cpp  VideoPane.h  WrapInScrollArea.cpp  WrapInScrollArea.h
src/program/ui/settings/tooltip/: BalloonTip.cpp  BalloonTip.h  ToolTipCheckBox.cpp  ToolTipCheckBox.h  ToolTipComboBox.cpp  ToolTipComboBox.h  ToolTipGroupBox.cpp  ToolTipGroupBox.h  ToolTipRadioButton.cpp  ToolTipRadioButton.h  ToolTipSlider.cpp  ToolTipSlider.h  ToolTipSpinBox.cpp  ToolTipSpinBox.h  ToolTipWidget.h
src/tinySDGL/src/: CMakeLists.txt  Makefile  api.c
test/: Makefile  end_to_end.sh  hooklib1.c  hooklib1.h  hooklib2.c  hooklib2.h  hooklib3.c  hooklib3.h  hookmain.c  test_ruffle_nv14.ltm
utils/: Dustmod2libTAS.py  alloc.c  filebacking.c  genkeydesc.c  gettimes.cpp  mmap.c  sdl2-joystick.c  simplestGLgame.c  simplestgame.c  symbol_signature.c
(+290 files in other folders)
